# EmeraldEngine

./: CMakeLists.txt  EngineGraph.graphml
lib/: CMakeLists.txt
lib/include/: EE.hpp  world.hpp
lib/src/: EE.cpp  world.cpp
src/: CMakeLists.txt  test.cpp
